@@ -51,7 +51,7 @@ setup(name='collective.nitf',
         'collective.js.galleria',
         'collective.js.jqueryui',
         'collective.prettydate>=1.1',
-        'collective.z3cform.widgets',
+        'collective.z3cform.widgets>=1.0b6',
         'five.grok',
         'Pillow',
         'plone.app.dexterity [grok, relations]',
