@@ -1,3 +1,2 @@
 [versions]
-archetypes.querywidget = 1.0.7
-collective.z3cform.widgets = 1.0b5
+collective.z3cform.widgets = 1.0b6
